chore: Atualiza versões de dependências e refatora mensagens de erro e formatação de strings